# bls-data

./: README.md  setup.cfg
bls_data/: __init__.py  bls.py  bls_data.py
bls_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bls_data/bls_data.egg-info/: PKG-INFO  SOURCES.txt
bls_data/data/: area_titles.csv  la_area.csv  oes_areas.csv
