[metadata]
name = bls_data
version = 0.0.2
author = Aaron Finocchiaro
author_email = afinny10@gmail.com
description = A Python library to parse and visualize Bureau of Labor Statistics Data
long_description = file: README.md, LICENSE.txt 
long_description_content_type = text/markdown
url = https://github.com/a-finocchiaro/bls-data
download_url = https://github.com/a-finocchiaro/bls-data/archive/refs/tags/0.0.1.zip
keywords = Pandas, Bureau, Labor, Statistics, Plotly
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    bls_data
install_requires =
    pandas
    plotly
    requests
python_requires= >=3.7

[options.package_data]
* = data/*.csv

# [options.packages.find]
# where = bls_data
